Change from absolute to relative paths on all src attributes

--- a/partials/directory/employee-edit.html
+++ b/partials/directory/employee-edit.html
@@ -9,7 +9,7 @@
 			</div>
 			<div class="modal-body container-fluid">
 				<div class="row">
-					<img data-ng-src="{{employee.Picture}}" fallback-src="/media/missing.png" data-ng-style="{'max-width': '120px', 'max-height': '170px'}" class="center-block img-circle">
+					<img data-ng-src="{{employee.Picture}}" fallback-src="media/missing.png" data-ng-style="{'max-width': '120px', 'max-height': '170px'}" class="center-block img-circle">
 				</div>
 				<buffer></buffer>
 				<div class="row">
