--- a/partials/main.html
+++ b/partials/main.html
@@ -8,7 +8,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a href="" class="navbar-brand"><img src="/media/BYUI1.png" height="25"> Testing Center</a>
+				<a href="" class="navbar-brand"><img src="media/BYUI1.png" height="25"> Testing Center</a>
 			</div>
 			<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav">
