--- a/partials/schedule/today/today.html
+++ b/partials/schedule/today/today.html
@@ -21,7 +21,7 @@
                             <div class="col-md-5">
                                 <div class="pull-right">
                                     <div>
-                                        <img data-ng-src="{{employee.substitutePicture}}" fallback-src="/media/missing.png" class="list-item img-circle" data-template="partials/schedule/today/substitute-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
+                                        <img data-ng-src="{{employee.substitutePicture}}" fallback-src="media/missing.png" class="list-item img-circle" data-template="partials/schedule/today/substitute-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
                                     </div>
                                     {{employee.substitutePreferredName}} {{employee.substituteLastName}}
                                 </div>
@@ -32,7 +32,7 @@
                             <div class="col-md-5">
                                 <div class="pull-left">
                                     <div>
-                                        <img data-ng-src="{{employee.employeePicture}}" fallback-src="/media/missing.png" class="list-item img-circle" data-template="partials/schedule/today/employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
+                                        <img data-ng-src="{{employee.employeePicture}}" fallback-src="media/missing.png" class="list-item img-circle" data-template="partials/schedule/today/employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
                                     </div>
                                     {{employee.employeePreferredName}} {{employee.employeeLastName}}
                                 </div>
@@ -40,7 +40,7 @@
                         </div>
                         <div data-ng-hide="employee.substitutePreferredName !== ''">
                             <div>
-                                <img data-ng-src="{{employee.employeePicture}}" fallback-src="/media/missing.png" class="list-item img-circle" data-template="partials/schedule/today/employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
+                                <img data-ng-src="{{employee.employeePicture}}" fallback-src="media/missing.png" class="list-item img-circle" data-template="partials/schedule/today/employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
                             </div>
                             {{employee.employeePreferredName}} {{employee.employeeLastName}}
                         </div>
