Change title of new tab to unread in messages

--- a/partials/message/messages.html
+++ b/partials/message/messages.html
@@ -9,7 +9,7 @@
 			</div>
 			<ul class="nav nav-pillsCustom nav-justified" bs-navbar>
 				<li data-ng-class="{active: tab === 'new'}">
-					<a href="" data-ng-click="tab = 'new'">New<span data-ng-show="properties.unreadMessages > 0" class="badge badge-error">{{properties.unreadMessages}}</span></a>
+					<a href="" data-ng-click="tab = 'new'">Unread<span data-ng-show="properties.unreadMessages > 0" class="badge badge-error">{{properties.unreadMessages}}</span></a>
 				</li>
 				<li data-ng-class="{active: tab === 'read'}">
 					<a href="" data-ng-click="tab = 'read'">Read</a>
