--- a/partials/directive-partials/filter-semesters.html
+++ b/partials/directive-partials/filter-semesters.html
@@ -5,9 +5,16 @@
 		</div>
 	</div>
 	<div class="panel-body">
-		<div class="control-group">
+		<div data-ng-if="!properties.nextSemester.Id">
 			<button type="button" class="btn form-control" data-ng-class="{'btn-primary': ctrl.semester === 'currentSemester', 'btn-default': ctrl.semester === 'nextSemester'}" data-ng-click="ctrl.semester = 'currentSemester'">{{properties.currentSemester.ShiftGroup.Description}}</button>
-			<button type="button" class="btn form-control" data-ng-show="properties.nextSemester.Id" data-ng-class="{'btn-primary': ctrl.semester === 'nextSemester', 'btn-default': ctrl.semester === 'currentSemester'}" data-ng-click="ctrl.semester = 'nextSemester'">{{properties.nextSemester.ShiftGroup.Description}}</button>
+		</div>
+		<div class="btn-group btn-group-justified" data-ng-if="properties.nextSemester.Id">
+			<div class="btn-group" role="group">
+				<button type="button" class="btn form-control" data-ng-class="{'btn-primary': ctrl.semester === 'currentSemester', 'btn-default': ctrl.semester === 'nextSemester'}" data-ng-click="ctrl.semester = 'currentSemester'">{{properties.currentSemester.ShiftGroup.Description}}</button>
+			</div>
+			<div class="btn-group" role="group">
+				<button type="button" class="btn form-control" data-ng-class="{'btn-primary': ctrl.semester === 'nextSemester', 'btn-default': ctrl.semester === 'currentSemester'}" data-ng-click="ctrl.semester = 'nextSemester'">{{properties.nextSemester.ShiftGroup.Description}}</button>
+			</div>
 		</div>
 	</div>
 </div>
