--- a/partials/schedule/availability/availability.html
+++ b/partials/schedule/availability/availability.html
@@ -13,14 +13,14 @@
 			<div class="panel panel-primary" ng-model="ctrl.activePanel" data-ng-show="properties.extendedPrivledges || properties.currentUser.Position.Description === 'Coordinator'">
 				<div class="panel-heading">
 					<h4 class="panel-title">
-					Employees that haven't submitted there availability. {{'(' + arrays.noAvailabilityEmployees.length + ')'}}
+					Employees that haven't submitted there availability. {{'(' + arrays.noAvailabilityEmployees[ctrl.semester].length + ')'}}
 					<span class="glyphicon glyphicon-collapse-down pull-right" data-ng-click="toggle = true" data-ng-hide="toggle"></span>
 					<span class="glyphicon glyphicon-collapse-up pull-right" data-ng-click="toggle = false" data-ng-show="toggle"></span>
 				</h4>
 				</div>
 				<div class="panel-collapse" data-ng-hide="toggle">
 					<div class="panel-body">
-						<div data-ng-repeat="employee in arrays.noAvailabilityEmployees | orderBy:'PreferredName'" class="col-sm-4 col-md-2 text-center well" style="height: 180px">
+						<div data-ng-repeat="employee in arrays.noAvailabilityEmployees[ctrl.semester] | orderBy:'PreferredName'" class="col-sm-4 col-md-2 text-center well" style="height: 180px">
 							<div>
 								<img data-ng-src="{{employee.Picture}}" fallback-src="media/missing.png" class="img-circle" data-ng-style="{'max-width': '120px', 'max-height': '170px'}" data-template="partials/schedule/employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
 							</div>
