renamed and refactored files to make the Directory work -still doesnt-

--- a/public/src/modules/employees/views/employees.client.view.html
+++ b/public/src/modules/employees/views/employees.client.view.html
@@ -13,7 +13,7 @@
 				</span>
 			</div>
 			<div class="btn-group" data-ng-show="currentUser.extendedPrivledges">
-				<button class="btn btn-default form-control" data-animation="am-fade-and-scale" data-template="partials/directory/employee-add.html" data-bs-modal="modal">
+				<button class="btn btn-default form-control" data-animation="am-fade-and-scale" data-template="src/modules/employees/views/employees-add.client.view.html" data-bs-modal="modal">
 					<span class="glyphicon glyphicon-plus"></span> Add Employee
 				</button>
 				<button type="button" class="btn btn-default form-control" data-ng-click="hideInactive = !hideInactive" data-ng-hide="retired">
