--- a/public/src/modules/employees/views/employees-grid.client.view.html
+++ b/public/src/modules/employees/views/employees-grid.client.view.html
@@ -1,16 +1,32 @@
-<div data-ng-repeat="employee in employees | orderBy:properties.predicate | employeeFilter:{inactive:hideInactive, area: area.hideOthers, position: position.hide, retired: retired}  | filter:employeeSearch" class="col-sm-4 col-md-2 text-center well employee-well">
+<div data-ng-repeat="employee in employees | orderBy:properties.predicate | employeeFilter:{inactive:hideInactive, area: area.hideOthers, position: position.hide, retired: retired}  | filter:employeeSearch" class="col-sm-4 col-md-2 text-center well employee-well" data-ng-class="{'employee-well-emp': !currentUser.extendedPrivledges, 'employee-well-ext': currentUser.extendedPrivledges}">
 	<img data-ng-src="{{employee.Picture}}" data-fallback-src="src/modules/core/img/missing.png" class="img-circle employee-img" alt="employeePicture">
-	<div>
-		<b>{{employee.PreferredName}} {{employee.LastName}}</b>
-		<br>Position: {{employee.Position.Position}}
-		<br>Phone: {{employee.PhoneNumber | tel}}
-		<br>Email: {{employee.EmailAddress}}
-	</div>
-	<div data-ng-show="currentUser.data.Position.Position === 'FTE'">
-		INumber: {{employee.INumber}}
-		<br>Track: {{employee.Track.Description}}
-	</div>
-	<button data-ng-show="currentUser.extendedPrivledges" class="btn btn-link" data-animation="am-fade-and-scale" data-template="src/modules/employees/views/employee-edit.client.view.html" data-bs-modal="modal">
-		<span class="glyphicon glyphicon-edit"></span>
-	</button>
+	<h4>{{employee.PreferredName}} {{employee.LastName}}</h4>
+	<table class="table table-condensed">
+
+		<tr>
+			<td><span class="pull-left"><b>Position:</b></span><span class="pull-right">{{employee.Position.Position}}</span></td>
+		</tr>
+		<tr>
+			<td><span class="pull-left"><b>Phone:</b></span><span class="pull-right">{{employee.PhoneNumber | tel}}</span></td>
+		</tr>
+		<tr>
+			<td><span class="pull-left"><b>Email:</b></span><span class="pull-right">{{employee.EmailAddress}}</span></td>
+		</tr>
+		<tr data-ng-show="currentUser.hrPrivledges">
+			<td><span class="pull-left"><b>Id Number:</b></span><span class="pull-right">{{employee.Id}}</span></td>
+		</tr>
+		<tr data-ng-show="currentUser.hrPrivledges">
+			<td><span class="pull-left"><b>Track:</b></span><span class="pull-right">{{employee.Track.Description}}</span></td>
+		</tr>
+		<tr data-ng-show="currentUser.Position.Description === 'FTE'">
+			<td><span class="pull-left"><b>INumber:</b></span><span class="pull-right">{{employee.INumber}}</span></td>
+		</tr>
+		<tr data-ng-show="currentUser.hrPrivledges">
+			<td colspan="2">
+				<button class="btn btn-link" data-animation="am-fade-and-scale" data-template="src/modules/employees/views/employee-edit.client.view.html" data-bs-modal="modal">
+					<span class="glyphicon glyphicon-edit"></span>
+				</button>
+			</td>
+		</tr>
+	</table>
 </div>
