--- a/public/src/modules/user/views/profile.client.view.html
+++ b/public/src/modules/user/views/profile.client.view.html
@@ -1,5 +1,11 @@
 <div class="form-horizontal">
 	<div class="form-group">
+		<label class="col-md-3 control-label">Id Number:</label>
+		<div class="col-md-9">
+			<input type="text" class="form-control" disabled="true" data-ng-model="currentUser.Id">
+		</div>
+	</div>
+	<div class="form-group">
 		<label class="col-md-3 control-label">First:</label>
 		<div class="col-md-9">
 			<input type="text" class="form-control" disabled="true" data-ng-model="currentUser.FirstName">
