add an animated loader for when we wait for data

--- a/public/src/modules/user/views/user-professor.client.view.html
+++ b/public/src/modules/user/views/user-professor.client.view.html
@@ -29,6 +29,8 @@
 		</tbody>
 	</table>
 </div>
-<div data-ng-hide="facultyTestingInfos.length > 0">
-	<img class="img-responsive" src="src/modules/core/img/loading-data.png" alt="loadingDataImage">
+<div data-ng-hide="facultyTestingInfos.length > 0" class="text-center">
+	<tcems-buffer></tcems-buffer>
+	<img class="img-circle employee-img" src="src/modules/core/img/loader.gif" alt="loadingDataImage">
+	<tcems-buffer></tcems-buffer>
 </div>
