fix the directory search clear button

--- a/public/src/modules/employees/views/employees.client.view.html
+++ b/public/src/modules/employees/views/employees.client.view.html
@@ -7,7 +7,7 @@
 				</label>
 				<input id="employeeSearch" class="form-control" type="text" data-ng-model="employeeSearch">
 				<span class="input-group-btn">
-					<button type="button" class="btn btn-default" data-ng-click="employeeSearch = null">
+					<button type="button" class="btn btn-default" data-ng-click="employeeSearch = ''">
 						<span class="glyphicon glyphicon-remove"></span>
 				</button>
 				</span>
