--- a/public/src/modules/messages/css/messages.css
+++ b/public/src/modules/messages/css/messages.css
@@ -2,7 +2,7 @@
 * @Author: Jonathan Baird
 * @Date:   2015-05-06 10:05:54
 * @Last Modified by:   Jonathan Baird
-* @Last Modified time: 2015-05-06 11:59:34
+* @Last Modified time: 2015-05-14 15:40:34
 */
 
 .emp-mess-img {
@@ -17,4 +17,7 @@
 	background-color: #f2f2f2;
 	position: relative;
 	top: -0.75em;
+}
+.emp-select-btn {
+	height: 100px;
 }
