--- a/public/src/modules/user/views/user.client.view.html
+++ b/public/src/modules/user/views/user.client.view.html
@@ -3,7 +3,7 @@
         <div class="aside-content">
             <div class="aside-header">
                 <button type="button" class="close" data-ng-click="$hide()">×</button>
-                <img data-ng-src="{{currentUser.Picture}}" data-fallback-src="media/missing.png" class="img-responsive img-circle" data-ng-style="{'max-width': '120px', 'max-height': '170px'}" alt="profilePicture">
+                <img data-ng-src="{{currentUser.Picture}}" data-fallback-src="src/modules/core/img/missing.png" class="img-responsive img-circle" data-ng-style="{'max-width': '120px', 'max-height': '170px'}" alt="profilePicture">
                 <h4 class="aside-title">{{currentUser.PreferredName}} {{currentUser.LastName}}</h4>
             </div>
             <ul class="nav nav-pillsCustom nav-justified" data-bs-navbar>
