--- a/public/src/modules/core/views/header.client.view.html
+++ b/public/src/modules/core/views/header.client.view.html
@@ -6,7 +6,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a href="/#!/" class="navbar-brand"><img src="src/modules/core/img/BYUI1.png" alt="BYU-Idaho" height="25"> Testing Center</a>
+		<a href="/#!/" class="navbar-brand"><img src="src/modules/core/img/BYUI1.png" alt="BYU-Idaho" height="25">&nbsp;Testing&nbsp;Center</a>
 	</div>
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
 		<ul class="nav navbar-nav">
@@ -36,13 +36,16 @@
 			</li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
-			<li data-ng-show="currentUser.Active">
-				<a data-bs-aside="aside" data-template="src/modules/messages/views/messages.client.view.html" data-placement="right" data-animation="am-fade-and-slide-right" data-container="body">
-					<span class="glyphicon glyphicon-envelope"></span><span data-ng-show="unreadMessages.count > 0" class="badge badge-error">{{unreadMessages.count}}</span>
+			<li data-ng-show="currentUser.Position.Description !== 'Applicant'">
+				<a data-bs-aside="aside" data-template="src/modules/messages/views/messages.client.view.html"
+				data-placement="right" data-animation="am-fade-and-slide-right" data-container="body">
+					<span class="glyphicon glyphicon-envelope"></span>
+					<span data-ng-show="unreadMessages.count > 0" class="badge badge-error">{{unreadMessages.count}}</span>
 				</a>
 			</li>
-			<li data-ng-show="currentUser.Active">
-				<a data-bs-aside="aside" data-template="src/modules/user/views/user.client.view.html" data-placement="right" data-animation="am-fade-and-slide-right" data-container="body">
+			<li data-ng-show="currentUser.Position.Description !== 'Applicant'">
+				<a data-bs-aside="aside" data-template="src/modules/user/views/user.client.view.html"
+				data-placement="right" data-animation="am-fade-and-slide-right" data-container="body">
 					<span class="glyphicon glyphicon-user"></span>
 				</a>
 			</li>
@@ -50,3 +53,4 @@
 	</nav>
 </header>
 <tcems-header-banner></tcems-header-banner>
+
