--- a/public/src/modules/core/views/inactive-employee.client.view.html
+++ b/public/src/modules/core/views/inactive-employee.client.view.html
@@ -1,10 +1,8 @@
-<div class="container-fluid">
-	<main class="row">
-		<div class="container text-center">
-			<p>If you feel that you have reached this page in error please contact the Testing Center.</p>
-			<p>Phone Number: (208) 496-1757</p>
-			<p>Email: TestCenterHR@byui.edu</p>
-			<!-- <p>If would like to apply for a job at the testing center please click <a href="" title="">here</a></p> -->
-		</div>
-	</main>
+<div class="container text-center">
+	<p>If you feel that you have reached this page in error please contact the Testing
+		Center.
+	</p>
+	<p>Phone Number: (208) 496-1757</p>
+	<p>Email: TestCenterHR@byui.edu</p>
 </div>
+
