--- a/public/src/modules/shifts/views/delete-shift.client.view.html
+++ b/public/src/modules/shifts/views/delete-shift.client.view.html
@@ -1,19 +1,19 @@
-<div class="modal" data-ng-controller="ShiftEditCtrl as shiftCtrl">
-	<div class="modal-dialog text-muted text-left">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-ng-click="$hide()">&times;</button>
-				<h4 class="modal-title">{{shift.toString()}}</h4>
-			</div>
-			<div class="modal-body">
-				<div class="row">
-					<div class="warning text-center">Are you sure you want to delete this shift?</div>
-				</div>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-success" data-ng-click="$hide()">No</button>
-				<button type="button" class="btn btn-danger" data-ng-click="shiftCtrl.deactivateShift(); $hide()">Yes</button>
-			</div>
-		</div>
-	</div>
+<div class="modal" data-ng-controller="EditShiftController as shiftCtrl">
+    <div class="modal-dialog text-muted text-left">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-ng-click="$hide()">&times;</button>
+                <h4 class="modal-title">{{shift.toString()}}</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="warning text-center">Are you sure you want to delete this shift?</div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" data-ng-click="$hide()">No</button>
+                <button type="button" class="btn btn-danger" data-ng-click="shiftCtrl.deactivateShift()">Yes</button>
+            </div>
+        </div>
+    </div>
 </div>
